added homework EncryptedClassLoader